# AI-Checkers

./: Board.cc  CLI.cc  CMakeLists.txt
docs/: index.md
heads/: Board.h
tests/: BoardTest.cc  CMakeLists.txt  TileTest.cc  UnitTest.cc
